--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
